--- a/css/main.css
+++ b/css/main.css
@@ -5095,7 +5095,7 @@ input,
 select,
 textarea {
     outline: none;
-    -webkit-appearance: none;
+    /* -webkit-appearance: none; */
     font-family: inherit;
     font-size: inherit;
     background: none;
@@ -5687,8 +5687,9 @@ small {
 .mobile-menu {
     display: none;
     position: absolute;
-    top: 100px;
+    top: 80px;
     left: 0;
+    background-color: white;
     height: calc(100vh - 100px);
     width: 100%;
 }
@@ -5721,7 +5722,7 @@ small {
 
 .header-2 .nav .main-menu > li {
     line-height: 75px;
-}
+}   
 
 @media (max-width: 992px) {
     .nav .main-menu > li {
@@ -5910,6 +5911,123 @@ small {
     5.0 - Pages styles
     5.1 - Home
 -------------------------- */
+
+/* slider */
+
+.slider {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.slides {
+    width: 500%;
+    height: 100vh;
+    display: flex;
+}
+
+.slides input { 
+    display: none;
+}
+
+.slide {
+    width: 20%;
+    transition: 2s;
+}
+
+.slide img {
+    width: 100%;
+}
+
+@media (min-width: 992px) {
+    .slide img {
+        object-fit: cover;
+        height: 100vh;
+    }
+}
+
+@media (max-width: 992px) {
+    .slider .slides {
+        height: auto
+    }
+    
+}
+
+.navigation-manual {
+    position: absolute;
+    width: 100%;
+    margin-top: 90vh;
+    display: flex;
+    justify-content: center;
+}
+
+.manual-btn {
+    border: 2px solid rgb(78, 170, 213);
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.manual-btn:not(:last-child) {
+    margin-right: 40px;
+}
+
+.manual-btn:hover {
+    background-color: rgb(78, 170, 213);
+}
+
+#radio1:checked ~ .first {
+    margin-left: 0
+}
+
+#radio2:checked ~ .first {
+    margin-left: -20%
+}
+
+#radio3:checked ~ .first {
+    margin-left: -40%
+}
+
+#radio4:checked ~ .first {
+    margin-left: -60%
+}
+
+.navigation-auto {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-top: 90vh;
+}
+
+.navigation-auto div {
+    border: 2px solid rgb(78, 170, 213);
+    padding: 5px;
+    border-radius: 10px;
+    transition: 1s;
+}
+
+.navigation-auto div:not(:last-child) {
+    margin-right: 40px;
+}
+
+#radio1:checked ~ .navigation-auto .auto-btn1{
+    background-color: rgb(78, 170, 213);
+}
+
+#radio2:checked ~ .navigation-auto .auto-btn2{
+    background-color: rgb(78, 170, 213);
+}
+
+#radio3:checked ~ .navigation-auto .auto-btn3{
+    background-color: rgb(78, 170, 213);
+}
+
+#radio4:checked ~ .navigation-auto .auto-btn4{
+    background-color: rgb(78, 170, 213);
+}
+/* slider */
 .index .index-bar {
     display: flex;
     align-items: center;
